src/objects/ities_bsc__birthdayReminderSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Customizations specific to the Birthday Reminder application.</description>
    <fields>
        <fullName>ities_bsc__isAllVisible__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Designation for showing all records to which the User has access.</description>
        <label>isAllVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ities_bsc__range__c</fullName>
        <description>The number of days to use in the SOQL query.</description>
        <label>Range</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ities_bsc__recordsHorizontal__c</fullName>
        <description>The number of records to display in the horizontal lightning widget.</description>
        <label>Records (Horizontal)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ities_bsc__recordsVertical__c</fullName>
        <description>The number of records to display in the vertical Lightning widget.</description>
        <label>Records (Vertical)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Birthday Reminders Settings</label>
</CustomObject>